Fix footer links contrast - make Impressum/Datenschutz white

--- a/_sass/components/_social.scss
+++ b/_sass/components/_social.scss
@@ -7,8 +7,11 @@
   a {
     padding: 10px;
     display: inline-block;
+    color: $white;
+    text-decoration: none;
     &:hover {
       opacity: 0.8;
+      text-decoration: underline;
     }
   }
 }
